# ordinal-cash

./: Cargo.toml  from_4_u64.py  gen_verifier.py  to_4_u64.py
docs/: syscalls.md
ordinal-macros/: Cargo.toml
ordinal-macros/src/: lib.rs
src/: lib.rs  merkle_tree.rs  mimcsponge.rs  ordinal_cash.rs  pairing.rs  utils.rs
