[package]
name = "ordinal-core"
version = "0.1.0"
authors = ["Ricky Han <rickylqhan@gmail.com>"]
edition = "2018"

[dependencies]
ethnum = "1"
ark-bn254 = "0.2.0"
ark-groth16 = "0.2.0"
ark-ff = { version = "0.2.0", features = ["std"] }
ark-ec = { version = "0.2.0", features = ["std"] }

# [patch.crates-io]
# ark-ec = { path = "../algebra/ec" }
# ark-bn254 = { path = "../curves/bn254" }
# ark-ff = { path = "../algebra/ff" }