[package]
name = "ordinal-core"
version = "0.1.0"
authors = ["Ricky Han <rickylqhan@gmail.com>"]
edition = "2018"

[dependencies]
ethnum = "1"
ark-std = { version = "0.2.0", default-features = false, features = [] }
ark-bn254 = { version = "0.2.0", default-features = false, features = ["curve"] }
ark-groth16 = { version = "0.2.0", default-features = false, features = [] }
ark-ff = { version = "0.2.0", default-features = false, features = [] }
ark-ec = { version = "0.2.0", default-features = false, features = [] }

# [patch.crates-io]
# ark-ec = { path = "../algebra/ec" }
# ark-bn254 = { path = "../curves/bn254" }
# ark-ff = { path = "../algebra/ff" }